--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,5 +20,10 @@
         android:layout_height="wrap_content"
         android:text="OMAGA GIT cu branch"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Gigel"/>
+
 
 </RelativeLayout>
