--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,7 +32,7 @@
         android:text="Menu"
         android:textSize="20dp"
         android:layout_marginTop="20dp"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/white"
         android:background="@color/colorPrimaryDark"
         android:id="@+id/H_menuBtn"/>
 
