--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,20 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.monic.cvgenerator.MenuActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Create CV"
         android:textSize="20dp"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/white"
         android:background="@color/colorPrimaryDark"
+        android:height="70dp"
         android:id="@+id/M_createCVBtn"/>
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="View CV"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:background="@color/colorButtonMedium"
+        android:height="70dp"
+        android:id="@+id/M_viewCVBtn"/>
 </LinearLayout>
