--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#843052</color>
     <color name="colorPrimaryDark">#510722</color>
     <color name="colorAccent">#ca8ea3</color>
+    <color name="colorHeader">#695a63</color>
+    <color name="white">#ffffff</color>
+    <color name="colorButtonMedium">#5c0b28</color>
 </resources>
