--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -105,6 +105,15 @@
                      android:layout_marginLeft="10dp"
                      android:textColor="@color/colorAccent" />
              </LinearLayout>
+             <Button
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:text="next"
+                 android:textSize="20dp"
+                 android:layout_marginTop="20dp"
+                 android:textColor="@color/white"
+                 android:background="@color/colorPrimaryDark"
+                 android:id="@+id/E_toWorkExperienceBtn"/>
          </LinearLayout>
      </ScrollView>
 </RelativeLayout>
