--- a/app/src/main/res/layout/activity_create_cv.xml
+++ b/app/src/main/res/layout/activity_create_cv.xml
@@ -111,7 +111,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -121,13 +120,15 @@
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="20dp" />
 
-                <Spinner
-                    android:id="@+id/C_socialNetworkSp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <Button
+                    android:layout_width="45dp"
+                    android:layout_height="35dp"
                     android:layout_marginLeft="10dp"
-                    android:entries="@array/social_networks_array"></Spinner>
-            </LinearLayout>
+                    android:text="+"
+                    android:background="@color/colorHeader"
+                    android:textColor="@color/white"
+                    android:id="@+id/C_addSocialNetworksBtn"/>
+               </LinearLayout>
 
 
             <LinearLayout
