--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -16,7 +16,6 @@
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
-
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
@@ -25,11 +24,10 @@
                  android:textColor="@color/colorHeader"
                  android:textSize="27dp"
                  android:shadowColor="@color/colorAccent" />
-
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="horizontal">
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2">
 
                  <TextView
                      android:layout_width="wrap_content"
@@ -44,12 +42,6 @@
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="10dp"
                      android:textColor="@color/colorAccent" />
-             </LinearLayout>
-
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="horizontal">
 
                  <TextView
                      android:layout_width="wrap_content"
@@ -64,47 +56,47 @@
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="10dp"
                      android:textColor="@color/colorAccent" />
-             </LinearLayout>
-
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="horizontal">
 
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/start_date"
                      android:textColor="@color/colorPrimaryDark"
-                     android:textSize="20dp" />
+                     android:textSize="20dp"/>
 
-                 <EditText
-                     android:id="@+id/E_startDateET"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginLeft="10dp"
-                     android:textColor="@color/colorAccent" />
-             </LinearLayout>
-
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:orientation="horizontal">
+                 <Spinner
+                     android:layout_height="50dp"
+                     android:layout_width="100dp"
+                     android:textAlignment="center"
+                     android:id="@+id/E_startYearSp"
+                     android:layout_marginLeft="5dp"
+                     android:background="@color/colorAccent" />
 
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/end_date"
                      android:textColor="@color/colorPrimaryDark"
-                     android:textSize="20dp" />
+                     android:textSize="20dp"
+                     android:layout_marginTop="10dp"/>
 
-                 <EditText
-                     android:id="@+id/E_endDateET"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginLeft="10dp"
-                     android:textColor="@color/colorAccent" />
-             </LinearLayout>
+                 <Spinner
+                     android:layout_height="50dp"
+                     android:layout_width="100dp"
+                     android:textAlignment="center"
+                     android:id="@+id/E_endYearSp"
+                     android:layout_marginLeft="5dp"
+                     android:background="@color/colorAccent"
+                     android:layout_marginTop="10dp" />
+        </GridLayout>
+             <Button
+                 android:layout_width="45dp"
+                 android:layout_height="35dp"
+                 android:layout_gravity="end"
+                 android:text="+"
+                 android:id="@+id/E_addEducationBtn"
+                 android:background="@color/colorHeader"
+                 />
              <Button
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
