In Education: am creat metoda care vede daca controalele sunt goale; e apelata de pe butonul de +

--- a/app/src/main/res/layout/activity_work_experience.xml
+++ b/app/src/main/res/layout/activity_work_experience.xml
@@ -119,7 +119,7 @@
                 android:layout_height="35dp"
                 android:layout_gravity="end"
                 android:text="+"
-                android:id="@+id/W_addWorkBtn"
+                android:id="@+id/W_addWorkExperienceBtn"
                 android:background="@color/colorHeader"
                 />
             <Button
