--- a/app/src/main/res/layout/languages_fragment.xml
+++ b/app/src/main/res/layout/languages_fragment.xml
@@ -44,9 +44,12 @@
 
         <Spinner
             android:id="@+id/Lf_levelsSp"
-            android:layout_marginTop="10dp"
-            android:layout_gravity="center"
-            android:entries="@array/language_levels"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"/>
+          <!--  android:entries="@array/language_levels"-->
+
+        <!--android:layout_gravity="center"-->
     </GridLayout>
     <Button
         android:id="@+id/Lf_addLanguageBtn"
