--- a/app/src/main/res/layout/activity_create_cv.xml
+++ b/app/src/main/res/layout/activity_create_cv.xml
@@ -22,7 +22,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Personal Information"
+                android:text="@string/createcv_title"
                 android:layout_gravity="center"
                 android:textColor="@color/colorHeader"
                 android:textSize="27dp"
