--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -19,7 +19,7 @@
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
-                 android:text="Education"
+                 android:text="@string/education_title"
                  android:layout_gravity="center"
                  android:textColor="@color/colorHeader"
                  android:textSize="27dp"
