--- a/app/src/main/res/layout/activity_languages.xml
+++ b/app/src/main/res/layout/activity_languages.xml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.monic.cvgenerator.LanguagesActivity">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:shadowColor="@color/colorAccent"
+        android:text="@string/languages_title"
+        android:textColor="@color/colorHeader"
+        android:textSize="27dp" />
+
     <Button
+        android:id="@+id/L_addNewLanguageBtn"
         android:layout_width="45dp"
         android:layout_height="35dp"
         android:layout_gravity="end"
-        android:text="+"
-        android:id="@+id/L_addNewLanguageBtn"
-        android:background="@color/colorHeader" />
+        android:background="@color/colorHeader"
+        android:text="+" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="next"
+        android:textSize="20dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/L_toITSkillsBtn"/>
 
     <ListView
+        android:id="@+id/L_languagesListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/activity_languages">
-    </ListView>
+        android:layout_height="match_parent"></ListView>
+
+
+
 </LinearLayout>
