--- a/app/src/main/res/layout/activity_itskills.xml
+++ b/app/src/main/res/layout/activity_itskills.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_itskills"
     android:layout_width="match_parent"
@@ -8,6 +8,38 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.monic.cvgenerator.ITSkillsActivity">
+    tools:context="com.example.monic.cvgenerator.ITSkillsActivity"
+    android:orientation="vertical">
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:shadowColor="@color/colorAccent"
+        android:text="@string/it_skills_title"
+        android:textColor="@color/colorHeader"
+        android:textSize="27dp" />
+
+    <Button
+        android:id="@+id/IT_addNewITSkillBtn"
+        android:layout_width="45dp"
+        android:layout_height="35dp"
+        android:layout_gravity="end"
+        android:background="@color/colorHeader"
+        android:text="+" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="next"
+        android:textSize="20dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimaryDark"
+        android:id="@+id/IT_toOtherSkillsBtn"/>
+
+    <ListView
+        android:id="@+id/IT_itSkillsListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
+
+</LinearLayout>
