--- a/app/src/main/res/layout/skills_fragment.xml
+++ b/app/src/main/res/layout/skills_fragment.xml
@@ -42,14 +42,13 @@
             android:textColor="@color/colorPrimary"
             android:textSize="20dp"/>
 
-        <Spinner
+       <Spinner
             android:id="@+id/SkF_levelsSp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:entries="@array/skill_levels"
-            android:layout_gravity="center"/>
-
+            android:layout_gravity="center"
+           android:entries="array/skill_levels"/>
     </GridLayout>
     <Button
         android:id="@+id/SkF_addSkillBtn"
