--- a/app/src/main/res/layout/skills_fragment.xml
+++ b/app/src/main/res/layout/skills_fragment.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
-           android:entries="array/skill_levels"/>
+           android:entries="@array/skill_levels"/>
     </GridLayout>
     <Button
         android:id="@+id/SkF_addSkillBtn"
