--- a/app/src/main/res/layout/activity_certificates.xml
+++ b/app/src/main/res/layout/activity_certificates.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_certificates"
     android:layout_width="match_parent"
@@ -8,6 +8,78 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:isScrollContainer="true"
     tools:context="com.example.monic.cvgenerator.CertificatesActivity">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:shadowColor="@color/colorAccent"
+        android:text="@string/certificates_title"
+        android:textColor="@color/colorHeader"
+        android:textSize="27dp" />
 
-</RelativeLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="2"
+        android:layout_marginTop="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/certificate_name"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20dp"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:id="@+id/CE_nameCertificateET"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/year"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20dp"/>
+
+    <Spinner
+        android:layout_height="50dp"
+        android:layout_width="100dp"
+        android:textAlignment="center"
+        android:id="@+id/CE_yearSpinner"
+        android:layout_marginLeft="60dp"
+        android:background="@color/colorAccent" />
+    </GridLayout>
+
+    <Button
+        android:layout_width="45dp"
+        android:layout_height="35dp"
+        android:layout_gravity="end"
+        android:text="+"
+        android:id="@+id/CE_addCertificateBtn"
+        android:background="@color/colorHeader"
+        android:layout_column="1"
+        android:layout_marginTop="20dp"
+        />
+
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:id="@+id/CE_CertificatesLV"
+        android:layout_marginTop="20dp"
+        android:background="@color/colorPrimary">
+    </ListView>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="next"
+            android:textSize="20dp"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/white"
+            android:background="@color/colorPrimaryDark"
+            android:id="@+id/CE_toViewCVBtn" />
+</LinearLayout>
