--- a/app/src/main/res/layout/activity_certificates.xml
+++ b/app/src/main/res/layout/activity_certificates.xml
@@ -4,82 +4,91 @@
     android:id="@+id/activity_certificates"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:isScrollContainer="true"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    android:isScrollContainer="true"
     tools:context="com.example.monic.cvgenerator.CertificatesActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:shadowColor="@color/colorAccent"
-        android:text="@string/certificates_title"
-        android:textColor="@color/colorHeader"
-        android:textSize="27dp" />
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="2"
-        android:layout_marginTop="10dp">
+        android:columnCount="2">
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:shadowColor="@color/colorAccent"
+            android:text="@string/certificates_title"
+            android:textColor="@color/colorHeader"
+            android:textSize="27dp" />
+
+        <Button
+            android:id="@+id/CE_toViewCVBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/to_next_activity"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
+    </GridLayout>
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:columnCount="2">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/certificate_name"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
 
         <EditText
+            android:id="@+id/CE_nameCertificateET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:id="@+id/CE_nameCertificateET"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/year"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="20dp"/>
+            android:layout_gravity="center"/>
 
-    <Spinner
-        android:layout_height="50dp"
-        android:layout_width="100dp"
-        android:textAlignment="center"
-        android:id="@+id/CE_yearSpinner"
-        android:layout_marginLeft="60dp"
-        android:background="@color/colorAccent" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/year"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20dp" />
+
+        <Spinner
+            android:id="@+id/CE_yearSpinner"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="60dp"
+            android:background="@color/colorAccent"
+            android:textAlignment="center" />
     </GridLayout>
 
     <Button
+        android:id="@+id/CE_addCertificateBtn"
         android:layout_width="45dp"
         android:layout_height="35dp"
-        android:layout_gravity="end"
-        android:text="+"
-        android:id="@+id/CE_addCertificateBtn"
-        android:background="@color/colorHeader"
         android:layout_column="1"
+        android:layout_gravity="end"
         android:layout_marginTop="20dp"
-        />
-
+        android:background="@color/colorHeader"
+        android:text="@string/add"
+        android:textColor="@color/white"/>
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
         android:id="@+id/CE_CertificatesLV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@color/colorPrimary">
-    </ListView>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="next"
-            android:textSize="20dp"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/white"
-            android:background="@color/colorPrimaryDark"
-            android:id="@+id/CE_toViewCVBtn" />
+        android:background="@color/colorPrimary"></ListView>
+
 </LinearLayout>
