--- a/app/src/main/res/layout/activity_create_cv.xml
+++ b/app/src/main/res/layout/activity_create_cv.xml
@@ -19,19 +19,35 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/createcv_title"
-                android:layout_gravity="center"
-                android:textColor="@color/colorHeader"
-                android:textSize="27dp"
-                android:shadowColor="@color/colorAccent" />
-
-            <LinearLayout
+            <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:columnCount="2">
+
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:shadowColor="@color/colorAccent"
+                    android:text="@string/createcv_title"
+                    android:textColor="@color/colorHeader"
+                    android:textSize="27dp" />
+
+                <Button
+                    android:id="@+id/C_toEducationBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimaryDark"
+                    android:text="@string/to_next_activity"
+                    android:textColor="@color/white"
+                    android:textSize="20dp" />
+            </GridLayout>
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:layout_marginTop="@dimen/activity_vertical_margin">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -46,12 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:textColor="@color/colorAccent" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -66,12 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:textColor="@color/colorAccent" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -85,14 +91,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:textColor="@color/colorAccent"
-                    android:inputType="phone"/>
-            </LinearLayout>
+                    android:inputType="phone"
+                    android:textColor="@color/colorAccent" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -106,38 +107,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:textColor="@color/colorAccent"
-                    android:inputType="textEmailAddress"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/social_networks"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="20dp" />
-
-                <Button
-                    android:layout_width="45dp"
-                    android:layout_height="35dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="+"
-                    android:background="@color/colorHeader"
-                    android:textColor="@color/white"
-                    android:id="@+id/C_addSocialNetworksBtn"/>
-               </LinearLayout>
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/colorAccent" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+
+
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -163,12 +138,7 @@
                         android:layout_height="wrap_content"
                         android:text="F" />
                 </RadioGroup>
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -181,19 +151,26 @@
                     android:id="@+id/C_chooseBirthdayET"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:inputType="date"
-                    android:focusableInTouchMode="false"/>
-            </LinearLayout>
+                    android:focusableInTouchMode="false"
+                    android:inputType="date" />
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="next"
-                android:textSize="20dp"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/white"
-                android:background="@color/colorPrimaryDark"
-                android:id="@+id/C_toEducationBtn"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/social_networks"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20dp" />
+
+                <Button
+                    android:id="@+id/C_addSocialNetworksBtn"
+                    android:layout_width="45dp"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@color/colorHeader"
+                    android:text="@string/add"
+                    android:textColor="@color/white" />
+
+            </GridLayout>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
