--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -9,103 +9,148 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.monic.cvgenerator.EducationActivity">
-     <ScrollView
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content">
-         <LinearLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:orientation="vertical">
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="@string/education_title"
-                 android:layout_gravity="center"
-                 android:textColor="@color/colorHeader"
-                 android:textSize="27dp"
-                 android:shadowColor="@color/colorAccent" />
-        <GridLayout
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:columnCount="2">
+            android:orientation="vertical">
 
-                 <TextView
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="@string/school"
-                     android:textColor="@color/colorPrimaryDark"
-                     android:textSize="20dp" />
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2">
 
-                 <EditText
-                     android:id="@+id/E_schoolET"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginLeft="10dp"
-                     android:textColor="@color/colorAccent" />
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:shadowColor="@color/colorAccent"
+                    android:text="@string/education_title"
+                    android:textColor="@color/colorHeader"
+                    android:textSize="27dp" />
 
-                 <TextView
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="@string/field_of_study"
-                     android:textColor="@color/colorPrimaryDark"
-                     android:textSize="20dp" />
+                <Button
+                    android:id="@+id/E_toWorkExperienceBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimaryDark"
+                    android:text="@string/to_next_activity"
+                    android:textColor="@color/white"
+                    android:textSize="20dp" />
+            </GridLayout>
 
-                 <EditText
-                     android:id="@+id/E_fieldOfStudyET"
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:layout_marginLeft="10dp"
-                     android:textColor="@color/colorAccent" />
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:layout_marginTop="@dimen/activity_vertical_margin">
 
-                 <TextView
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="@string/start_date"
-                     android:textColor="@color/colorPrimaryDark"
-                     android:textSize="20dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/school"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20dp" />
 
-                 <Spinner
-                     android:layout_height="50dp"
-                     android:layout_width="100dp"
-                     android:textAlignment="center"
-                     android:id="@+id/E_startYearSp"
-                     android:layout_marginLeft="5dp"
-                     android:background="@color/colorAccent" />
+                <EditText
+                    android:id="@+id/E_schoolET"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/colorAccent" />
 
-                 <TextView
-                     android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:text="@string/end_date"
-                     android:textColor="@color/colorPrimaryDark"
-                     android:textSize="20dp"
-                     android:layout_marginTop="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/field_of_study"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20dp" />
 
-                 <Spinner
-                     android:layout_height="50dp"
-                     android:layout_width="100dp"
-                     android:textAlignment="center"
-                     android:id="@+id/E_endYearSp"
-                     android:layout_marginLeft="5dp"
-                     android:background="@color/colorAccent"
-                     android:layout_marginTop="10dp" />
-        </GridLayout>
-             <Button
-                 android:layout_width="45dp"
-                 android:layout_height="35dp"
-                 android:layout_gravity="end"
-                 android:text="+"
-                 android:id="@+id/E_addEducationBtn"
-                 android:background="@color/colorHeader"
-                 />
-             <Button
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:text="next"
-                 android:textSize="20dp"
-                 android:layout_marginTop="20dp"
-                 android:textColor="@color/white"
-                 android:background="@color/colorPrimaryDark"
-                 android:id="@+id/E_toWorkExperienceBtn"/>
-         </LinearLayout>
-     </ScrollView>
+                <EditText
+                    android:id="@+id/E_fieldOfStudyET"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@color/colorAccent" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/type_of_study"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20dp" />
+
+                <RadioGroup
+                    android:id="@+id/E_typeOfStudyRadioGr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="High School" />
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Bachelor" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Master" />
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="PHD" />
+                </RadioGroup>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/start_date"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20dp" />
+
+                <Spinner
+                    android:id="@+id/E_startYearSp"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@color/colorAccent"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/end_date"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="20dp" />
+
+                <Spinner
+                    android:id="@+id/E_endYearSp"
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/colorAccent"
+                    android:textAlignment="center" />
+            </GridLayout>
+
+            <Button
+                android:id="@+id/E_addEducationBtn"
+                android:layout_width="45dp"
+                android:layout_height="35dp"
+                android:layout_gravity="end"
+                android:background="@color/colorHeader"
+                android:text="@string/add"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
