--- a/app/src/main/res/layout/activity_work_experience.xml
+++ b/app/src/main/res/layout/activity_work_experience.xml
@@ -20,19 +20,35 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:shadowColor="@color/colorAccent"
-                android:text="@string/work_experience_title"
-                android:textColor="@color/colorHeader"
-                android:textSize="27dp" />
-
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:columnCount="2">
+
+                <TextView
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:shadowColor="@color/colorAccent"
+                    android:text="@string/work_experience_title"
+                    android:textColor="@color/colorHeader"
+                    android:textSize="27dp" />
+
+                <Button
+                    android:id="@+id/W_toLanguagesBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorPrimaryDark"
+                    android:text="@string/to_next_activity"
+                    android:textColor="@color/white"
+                    android:textSize="20dp" />
+            </GridLayout>
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:layout_marginTop="@dimen/activity_vertical_margin">
 
                 <TextView
                     android:text="@string/position"
@@ -118,19 +134,11 @@
                 android:layout_width="45dp"
                 android:layout_height="35dp"
                 android:layout_gravity="end"
-                android:text="+"
+                android:text="@string/add"
+                android:textColor="@color/white"
                 android:id="@+id/W_addWorkExperienceBtn"
                 android:background="@color/colorHeader"
                 />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="next"
-                android:textSize="20dp"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/white"
-                android:background="@color/colorPrimaryDark"
-                android:id="@+id/W_toLanguages"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
